--- a/EventLogUtility/Supporting Files/Nib/Document/MasterFileListView.xib
+++ b/EventLogUtility/Supporting Files/Nib/Document/MasterFileListView.xib
@@ -13,22 +13,44 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="dLI-PZ-kbP">
+        <customView id="dLI-PZ-kbP" customClass="LMBaseView">
             <rect key="frame" x="0.0" y="0.0" width="182" height="367"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hJU-0n-15L">
+                    <rect key="frame" x="6" y="349" width="170" height="17"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="17" id="KlX-Oq-3KU"/>
+                    </constraints>
+                    <animations/>
+                    <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="File List" id="dvN-9O-xJd">
+                        <font key="font" metaFont="systemSemibold" size="9"/>
+                        <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="13c-ch-xVX">
+                    <rect key="frame" x="5" y="346" width="172" height="5"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="10c-YF-fxy"/>
+                    </constraints>
+                    <animations/>
+                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <font key="titleFont" metaFont="system"/>
+                </box>
                 <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="47" horizontalPageScroll="10" verticalLineScroll="47" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pBE-Fn-rPQ">
-                    <rect key="frame" x="0.0" y="0.0" width="182" height="337"/>
+                    <rect key="frame" x="0.0" y="0.0" width="182" height="346"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="hjg-cc-rbN">
-                        <rect key="frame" x="0.0" y="0.0" width="182" height="337"/>
+                        <rect key="frame" x="0.0" y="0.0" width="182" height="346"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="45" viewBased="YES" id="caF-gx-Rf6">
-                                <rect key="frame" x="0.0" y="0.0" width="182" height="337"/>
+                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="45" viewBased="YES" id="caF-gx-Rf6">
+                                <rect key="frame" x="0.0" y="0.0" width="182" height="346"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <animations/>
                                 <size key="intercellSpacing" width="3" height="2"/>
-                                <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
                                     <tableColumn identifier="MainCell" width="179" minWidth="40" maxWidth="1000" id="p8t-GX-fVe">
@@ -135,27 +157,18 @@
                         <animations/>
                     </scroller>
                 </scrollView>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hJU-0n-15L">
-                    <rect key="frame" x="6" y="342" width="170" height="17"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="17" id="KlX-Oq-3KU"/>
-                    </constraints>
-                    <animations/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="File List :" id="dvN-9O-xJd">
-                        <font key="font" metaFont="system" size="11"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="pBE-Fn-rPQ" secondAttribute="trailing" id="2mp-RN-3wF"/>
+                <constraint firstItem="13c-ch-xVX" firstAttribute="top" secondItem="hJU-0n-15L" secondAttribute="bottom" id="A2Y-Q2-OhZ"/>
                 <constraint firstAttribute="bottom" secondItem="pBE-Fn-rPQ" secondAttribute="bottom" id="Bug-My-igs"/>
-                <constraint firstItem="pBE-Fn-rPQ" firstAttribute="top" secondItem="hJU-0n-15L" secondAttribute="bottom" constant="5" id="L8j-F9-2jU"/>
+                <constraint firstItem="13c-ch-xVX" firstAttribute="leading" secondItem="dLI-PZ-kbP" secondAttribute="leading" constant="5" id="K51-5Z-EAO"/>
+                <constraint firstItem="pBE-Fn-rPQ" firstAttribute="top" secondItem="13c-ch-xVX" secondAttribute="bottom" constant="2" id="Uqi-na-arV"/>
                 <constraint firstItem="hJU-0n-15L" firstAttribute="leading" secondItem="dLI-PZ-kbP" secondAttribute="leading" constant="8" id="UyW-bw-Fh2"/>
                 <constraint firstItem="pBE-Fn-rPQ" firstAttribute="leading" secondItem="dLI-PZ-kbP" secondAttribute="leading" id="ouA-p6-39o"/>
                 <constraint firstAttribute="trailing" secondItem="hJU-0n-15L" secondAttribute="trailing" constant="8" id="qqk-bi-KjS"/>
-                <constraint firstItem="hJU-0n-15L" firstAttribute="top" secondItem="dLI-PZ-kbP" secondAttribute="top" constant="8" id="xhW-yq-WqN"/>
+                <constraint firstAttribute="trailing" secondItem="13c-ch-xVX" secondAttribute="trailing" constant="5" id="r4u-OU-ex1"/>
+                <constraint firstItem="hJU-0n-15L" firstAttribute="top" secondItem="dLI-PZ-kbP" secondAttribute="top" constant="1" id="xhW-yq-WqN"/>
             </constraints>
             <animations/>
             <point key="canvasLocation" x="145" y="253.5"/>
